k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ems
  labels:
    app.kubernetes.io/part-of: ems
